# api/group/time_template/router.go
@@ -16,7 +16,7 @@ func RegisterRouter(g group) {
 	tt := app.Group("/time_template")
 
 	tt.Use(func(c *fiber.Ctx) error {
-		c.Locals("Module", "time_server-time_template")
+		c.Locals("Module", "schedule_module-time")
 		return c.Next()
 	})
 
